# backend

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  Autonoma.service  Autonoma.service.in  CMakeLists.txt  Dockerfile  README.md  SpotifyPlaylister.service  __main__.py  api.py  env.production.enc  main.py  package-lock.json  package.json  requirements.txt  server.js
.github/workflows/: deploy.yml  python-app.yml  unittests.yml
config/: __init__.py  _config.py  _validators.py  config.js  config.json  config.py.enc  config.py.in  settings.toml
db/: index.js
models/: JWToken.py  ListModel.py  ObjectId.py  Settings.py  SpotifyAuthDetails.py  Stats.py  TimedBaseModel.py  User.py  __init__.py  errors.py
models/music/: Album.py  Artist.py  Playlist.py  Track.py  TrackLog.py  __init__.py
models/song/: Song.js
models/spotifyAuthDetails/: SpotifyAuthDetails.js
models/user/: User.js
repositories/: auth_flow.py  exceptions.py  stats.py  user.py
routers/login/: __init__.py  login.py
routers/me/: __init__.py  me.py
routers/metrics/: __init__.py  metrics.py
routes/: index.js
tests/: test_config.py  track_log.json  user.json  variables.py
tests/models/: test_JWToken.py  test_ObjectId.py  test_SpotifyAuthDetails.py  test_User.py
tests/repositories/: test_auth_flow.py  test_exceptions.py  test_stats.py  test_user.py
tests/utils/: test_mongo.py  test_time.py  test_uuid.py
tests/workers/: conftest.py  test_SpotiCron.py  (+1 more)
utils/: __init__.py  logger.py  mongo.py  time.py  uuid.py
worker/: index.js
workers/: MongoMigrate.py  SpotiCron.py  __init__.py
(+15 files in other folders)
